# sbox_linearization

./: CoverageCICO.ipynb  README.md  collect_and_verify.py  interactive-greedy-extension-AI.html  run_exhaustive_all.sh  run_exhaustive_sbox.sh  run_greedy_all.sh  run_greedy_sbox.sh  sbatcher.sh  sboxes.py  summary.sh  summary_logs_custom.txt  summary_logs_monomial.txt  summary_logs_sage.txt  summary_logs_super.txt  super_sbox.py
exhaustive_reduction/: ReductionExhaustive.cpp  makefile
greedy_extension/: Cargo.toml
greedy_extension/src/: algorithm.rs  dsu.rs  greedy_extension.rs  greedy_extention_entry_points.rs  implemented_algorithms.rs  lib.rs  main.rs
logs_custom/: n4_Remark1CCZ.txt.bz2.greedyext.20260220_142550.txt  n4_Remark1CCZ.txt.bz2.txt  n4_Remark1CCZinv.txt.bz2.greedyext.20260220_142550.txt  n4_Remark1CCZinv.txt.bz2.txt  n8_S15.txt.bz2.greedyext.20260220_142550.txt  n8_S15.txt.bz2.txt
logs_monomial/: n10_monomial3.txt.bz2.greedyext.20260220_210834.txt  n10_monomial3.txt.bz2.greedyext.20260222_000855.txt  n10_monomial3.txt.bz2.greedyext.20260223_083631.txt  n10_monomial3.txt.bz2.greedyext.20260223_083632.txt  n10_monomial3.txt.bz2.greedyext.20260223_083633.txt  n10_monomial5.txt.bz2.greedyext.20260220_210834.txt  n10_monomial5.txt.bz2.greedyext.20260222_000855.txt  n10_monomial5.txt.bz2.greedyext.20260223_083631.txt  n10_monomial5.txt.bz2.greedyext.20260223_083632.txt  n10_monomial5.txt.bz2.greedyext.20260223_083633.txt  n10_monomial7.txt.bz2.greedyext.20260220_210834.txt  n10_monomial7.txt.bz2.greedyext.20260222_000855.txt  (+256 more)
sboxes_sage/: n3_SEA.txt.bz2  (+779 more)
(+771 files in other folders)
