[package]
name = "greedy_extention"
version = "1.0.0"
edition = "2021"

[lib]
name = "greedy_extention"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.24.0"
itertools = "0.10"
rand = "0.8"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustc-hash = "1.1"
